# l2mapconv

./: .gitignore  .gitmodules  .vanity.example.yml  .vanity.schema.yml  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml
libs/: CMakeLists.txt
scripts/: apply-patches.sh  make-patches.sh
src/: .clang-tidy  CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/config/: CMakeLists.txt
src/config/include/config/: Config.h
src/config/src/: Config.cpp  Parse.cpp  Parse.h
